# Maratona-Python

./: 2_Funcoes.py  Descobrir_Moeda_Pais.py  README.md  Verificador_de_Sites.py  challenge-01  challenge-03
10_Sorteador_Instagram/: main.py
11_sorteador_flask/: main.py  pyproject.toml
11_sorteador_flask/templates/: index.html  result.html
12_Correios_SMS/: main.py  pyproject.toml
12_Correios_SMS/templates/: index.html  result.html
7_ScrappingToCSV/: credentials.json  googlesheet.py  jobs.csv  main.py
8_9_WebScrapping_Flask/: main.py  pyproject.toml
8_9_WebScrapping_Flask/.upm/: store.json
8_9_WebScrapping_Flask/templates/: id.html  index.html  recent.html
Sorteador_Instagram/: driver.py  main.py
challenge-07/: indeed.py
