[tool.poetry]
name = "desafio-14"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
twilio = "^6.52.0"
Flask = "^2.1.2"
selenium = "^4.2.0"
timer = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
